project card z-index fixed

--- a/src/levelSelect.css
+++ b/src/levelSelect.css
@@ -1,7 +1,8 @@
 /* Base styles for the projects section */
 .projects {
     padding: 40px;
-    background-color: rgb(0, 95, 223);
+    background-color: rgb(10, 89, 132);
+
     color: #333;
     text-align: center;
 }
@@ -53,6 +54,7 @@
     width: calc(33% - 20px); /* Adjusts width for responsiveness */
     min-width: 250px;
     overflow: hidden;
+    z-index: 20; 
     transition: transform 0.3s, box-shadow 0.3s;
 }
 
